[gd_scene load_steps=5 format=2]

[ext_resource path="res://Pickups.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]

[node name="Pickup" type="Spatial"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )

[node name="RigidBody" type="RigidBody" parent="."]
contacts_reported = 1
contact_monitor = true
axis_lock_linear_y = true
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="RigidBody"]
shape = SubResource( 1 )

[node name="CSGMesh" type="CSGMesh" parent="RigidBody"]
mesh = SubResource( 2 )
material = SubResource( 3 )

[node name="Timer" type="Timer" parent="RigidBody"]
wait_time = 4.0

[node name="CollisionTimer" type="Timer" parent="RigidBody"]
wait_time = 3.0
[connection signal="body_entered" from="RigidBody" to="RigidBody" method="_on_RigidBody_body_entered"]
[connection signal="timeout" from="RigidBody/Timer" to="RigidBody" method="_on_Timer_timeout"]
[connection signal="timeout" from="RigidBody/CollisionTimer" to="RigidBody" method="_on_CollisionTimer_timeout"]
